cricao  e estilizacao de section e formulario

--- a/index.html
+++ b/index.html
@@ -29,6 +29,49 @@
             </ul>
         </nav>
     </header>
+
+    <section class="algorithmHelp">
+        <div class="help">
+            <h2>Ajude o algoritmo a ser mais certeiro</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad quidem cumque incidunt aperiam quo repellendus quam minus nesciunt? Tempore odit quo dignissimos omnis accusamus illo dicta earum culpa reprehenderit amet?Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, ipsam? Hic magni a dolorem magnam molestiae ab nemo, officia, consequatur eum necessitatibus, saepe rem eligendi. Reprehenderit expedita consequatur rem voluptas.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad quidem cumque incidunt aperiam quo repellendus quam minus nesciunt? Tempore odit quo dignissimos omnis accusamus illo dicta earum culpa reprehenderit amet?Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, ipsam? Hic magni a dolorem magnam molestiae ab nemo, officia, consequatur eum necessitatibus, saepe rem eligendi. Reprehenderit expedita consequatur rem voluptas.</p>
+        </div>
+
+        <div class="form1">
+            <form id="form" action="GET">
+                <div>
+                    <label for="name">Seu Nome:
+                        <input type="text" name="name" id="name">
+                    </label>
+                    <span class="error"></span>
+                </div>
+                <div>
+                    <label for="email">E-mail:
+                        <input type="email" name="email" id="email">
+                    </label>
+                    <span class="error"></span>
+                </div>
+                <div>
+                    <label for="cpf">CPF:
+                        <input type="number" name="cpf" id="cpf">
+                    </label>
+                    <span class="error"></span>
+                </div>
+                <div class="selection">
+                    <input type="radio" name="masc" id="masc">
+                    <label  class="radio" for="radio">Masculino </label>
+
+                    <input type="radio" name="masc" id="masc">
+                    <label class="radio" for="radio">Feminino </label>
+                    <span class="error"></span>
+                </div>
+                <div>
+                    <button type="submit">Enviar</button>
+                </div>
+                
+            </form>
+        </div>
+    </section>
     <script src="script/script.js"></script>
 </body>
 </html>
