--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,25 +9,31 @@
 </head>
 <body>
     <header class="header">
-        <p>uma seleção de produtos</p>
-        <h1>especial para você</h1>
-        <p class="slogan">Todo os produtos desta lista foram selecionados a partir da sua navegação. Aproveite!</p>
-        <nav class="navbar">
-            <ul class="navlist">
-                <li class="navButtons">
-                    <a href="#" target="_blank"> Conheça Linx</a>
-                </li>
-                <li class="navButtons">
-                    <a href="#" target="_blank">Ajude o algorítmo</a>
-                </li>
-                <li class="navButtons">
-                    <a href="#" target="_blank">Seus produtos</a>
-                </li>
-                <li class="navButtons">
-                    <a href="#" target="_blank">Compartilhe</a>
-                </li>
-            </ul>
+        <div class="content">
+            <div class="contentText">
+                <p>uma seleção de produtos</p>
+                <h1>especial para você</h1>
+                <p class="slogan">Todo os produtos desta lista foram selecionados a partir da sua navegação. Aproveite!</p>
+            </div>
+            <nav class="navbar">
+                <ul class="navlist">
+                    <li class="navButtons">
+                        <a href="#" target="_blank"> Conheça Linx</a>
+                    </li>
+                    <li class="navButtons">
+                        <a href="#" target="_blank">Ajude o algorítmo</a>
+                    </li>
+                    <li class="navButtons">
+                        <a href="#" target="_blank">Seus produtos</a>
+                    </li>
+                    <li class="navButtons">
+                        <a href="#" target="_blank">Compartilhe</a>
+                    </li>
+                </ul>
         </nav>
+
+        </div>
+        
     </header>
 
     <section class="algorithmHelp">
@@ -72,6 +78,10 @@
             </form>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footerText">Testando suas habilidaes em HTML, CSS e JS. <br>Linkx Impulse <br> 2022</div>
+    </footer>
     <script src="script/script.js"></script>
 </body>
 </html>
