Criacao da section de selecao especial

--- a/index.html
+++ b/index.html
@@ -79,8 +79,16 @@
         </div>
     </section>
 
+    <section class="specialSelection">
+        <div class="special">
+            <h3>Sua seleção especial</h3>
+        </div>
+    </section>
+
     <section class="news">
-        <h3>Compartilhe a novidade</h3>
+        <div class="share">
+            <h3>Compartilhe a novidade</h3>
+        </div>
         <p>Quer que seus amigos também ganhem a lista personalizada deles? Preencha agora!</p>
 
         <form id="formShare" action="GET">
