--- a/index.html
+++ b/index.html
@@ -80,8 +80,58 @@
     </section>
 
     <section class="specialSelection">
-        <div class="special">
-            <h3>Sua seleção especial</h3>
+        <div class="container">
+            <div class="special">
+                <h3>Sua seleção especial</h3>
+            </div>
+
+            <div class="boxes">
+
+                <div class="box">
+                    <img src="#" alt="Porduct Image" class="product_img">
+                    <h4>Nome do produto </h4>
+                    <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
+                    <p>De: R$23,99</p>
+                    <p>Por:19,99</p>
+                    <p>ou 2x de R$9,99</p>
+                    <button>Comprar</button>
+                </div>
+
+                <div class="box">
+                    <img src="#" alt="Porduct Image" class="product_img">
+                    <h4>Nome do produto </h4>
+                    <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
+                    <p>De: R$23,99</p>
+                    <p>Por:19,99</p>
+                    <p>ou 2x de R$9,99</p>
+                    <button>Comprar</button>
+                </div>
+
+                <div class="box">
+                    <img src="#" alt="Porduct Image" class="product_img">
+                    <h4>Nome do produto </h4>
+                    <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
+                    <p>De: R$23,99</p>
+                    <p>Por:19,99</p>
+                    <p>ou 2x de R$9,99</p>
+                    <button>Comprar</button>
+                </div>
+
+                <div class="box">
+                    <img src="#" alt="Porduct Image" class="product_img">
+                    <h4>Nome do produto </h4>
+                    <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
+                    <p>De: R$23,99</p>
+                    <p>Por:19,99</p>
+                    <p>ou 2x de R$9,99</p>
+                    <button>Comprar</button>
+                </div>
+
+ 
+
+                
+
+            </div>
         </div>
     </section>
 
