--- a/index.html
+++ b/index.html
@@ -170,12 +170,10 @@
                     <p>ou 2x de R$9,99</p>
                     <button>Comprar</button>
                 </div>
-
- 
-
-                
-
             </div>
+
+            <button id="btnNewPage">Ainda mais produtos</button>
+            
         </div>
     </section>
 
