Criação de form.onsubmit

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
                         <span class="error"></span>
                     </div>
                     <div class="selection">
-                        <input type="radio" name="masc" id="masc">
+                        <input type="radio" name="masc" id="radio">
                         <label  class="radio" for="radio">Masculino </label>
     
-                        <input type="radio" name="masc" id="fem">
+                        <input type="radio" name="fem" id="radio" class="fem">
                         <label class="radio" for="radio">Feminino </label>
                         <span class="error"></span>
                     </div>
                     <div>
-                        <button type="submit">Enviar</button>
+                        <button id="enviar" type="submit">Enviar</button>
                     </div>
                     
                 </form>
