adiciona link para as sections no menu de naegação

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header class="header">
+    <header id="header" class="header">
         <div class="container">
             <div class="contentText">
                 <p>uma seleção de produtos</p>
@@ -18,16 +18,16 @@
             <nav class="navbar">
                 <ul class="navlist">
                     <li class="navButtons">
-                        <a href="#" target="_blank"> Conheça Linx</a>
+                        <a href="#header"> Conheça Linx</a>
                     </li>
                     <li class="navButtons">
-                        <a href="#" target="_blank">Ajude o algorítmo</a>
+                        <a href="#algorithmHelp">Ajude o algorítmo</a>
                     </li>
                     <li class="navButtons">
-                        <a href="#" target="_blank">Seus produtos</a>
+                        <a href="#specialSelection">Seus produtos</a>
                     </li>
                     <li class="navButtons">
-                        <a href="#" target="_blank">Compartilhe</a>
+                        <a href="#news">Compartilhe</a>
                     </li>
                 </ul>
             </nav>
@@ -36,7 +36,7 @@
         
     </header>
 
-    <section class="algorithmHelp">
+    <section id="algorithmHelp" class="algorithmHelp">
         <div class="container">
             <div class="help">
                 <h2>Ajude o algoritmo a ser mais certeiro</h2>
@@ -87,7 +87,7 @@
         
     </section>
 
-    <section class="specialSelection">
+    <section id="specialSelection" class="specialSelection">
         <div class="container">
             <div class="special">
                 <h3>Sua seleção especial</h3>
@@ -122,7 +122,7 @@
         </div>
     </section>
 
-    <section class="news">
+    <section id="news" class="news">
 
         <div class="container">
             <div class="share">
