adiciona mensagem de sucesso no envio do formulário

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="img/shopping-cart.ico" type="image/x-icon">
 
     <script src="https://kit.fontawesome.com/85d13629ac.js" crossorigin="anonymous"></script>
 
@@ -23,16 +24,16 @@
             <nav class="navbar">
                 <ul class="navlist">
                     <li class="navButtons">
-                        <a href="#header"> Conheça Linx</a>
+                        <a href="#"> Conheça Linx</a>
                     </li>
                     <li class="navButtons">
-                        <a href="#algorithmHelp">Ajude o algorítmo</a>
+                        <a href="#">Ajude o algorítmo</a>
                     </li>
                     <li class="navButtons">
-                        <a href="#specialSelection">Seus produtos</a>
+                        <a href="#">Seus produtos</a>
                     </li>
                     <li class="navButtons">
-                        <a href="#news">Compartilhe</a>
+                        <a href="#">Compartilhe</a>
                     </li>
                 </ul>
             </nav>
@@ -76,8 +77,9 @@
                             <span class="error"></span>
                         </label>
                     </div>
-                    <div>
+                    <div class="btn">
                         <button id="enviar" type="submit">Enviar</button>
+                        <span class="formSend"></span>
                     </div>
                     
                 </form>
@@ -88,16 +90,17 @@
     </section>
 
     <section id="specialSelection" class="specialSelection">
+
         <div class="container">
+
             <fieldset class="special">
                 <legend>Sua seleção especial</legend>
             </fieldset>
 
             <div id="boxes">
-
                 <!-- Será sobrescrito pela função em JavaScript -->
                     <div class="box">
-                        <div class="img"><img class="fa-sample " src="img/store-solid.png" alt="Product Sample"></i></div>
+                        <div class="img"><img class="fa-sample " src="img/store-solid.png" alt="Product Sample"></div>
 
                         <div class="productText">
                             <h4>
