--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos</title>
-    <link rel="stylesheet" href="style/style.css">
+    <title>Sua seleção de produtos aqui</title>
+    <link rel="stylesheet" href="style/main.css">
     <link rel="shortcut icon" href="img/shopping-cart.ico" type="image/x-icon">
 
     <script src="https://kit.fontawesome.com/85d13629ac.js" crossorigin="anonymous"></script>
@@ -170,7 +170,7 @@
     </section>
 
     <footer class="footer">
-        <div class="footerText">Testando suas habilidaes em HTML, CSS e JS. <br>Linkx Impulse <br> 2022</div>
+        <div class="footerText">Testando suas habilidaes em HTML, CSS e JS. <br>Linx Impulse <br> 2022</div>
     </footer>
 
     <script src="script/script.js"></script>
