Adiciona regex para validação de CPF no formato válido

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </label>
                     </div>
                     <div class="btn">
-                        <button id="enviar" type="submit">Enviar</button>
+                        <button id="send" type="submit">Enviar</button>
                         <span class="formSend"></span>
                     </div>
                     
